// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePageComponent > App Router > JavaScript > generates repeatable page 1`] = `
"import { notFound } from "next/navigation";
import { asImageSrc } from "@prismicio/client";
import { SliceZone } from "@prismicio/react";

import { createClient } from "@/prismicio";
import { components } from "@/slices";
		
		export default async function Page({ params }) {
	const { uid } = await params;
	const client = createClient();
	const page = await client
		.getByUID("blog_post", uid)
		.catch(() => notFound());

	return <SliceZone slices={page.data.slices} components={components} />;
}

		export async function generateMetadata({
	params,
}) {
	const { uid } = await params;
	const client = createClient();
	const page = await client
		.getByUID("blog_post", uid)
		.catch(() => notFound());

	return {
		title: page.data.meta_title,
		description: page.data.meta_description,
		openGraph: {
			images: [{ url: asImageSrc(page.data.meta_image) ?? "" }],
		},
	};
}
		export async function generateStaticParams() {
	const client = createClient();
	const pages = await client.getAllByType("blog_post");

	return pages.map((page) => ({ uid: page.uid }));
}"
`;

exports[`generatePageComponent > App Router > JavaScript > generates singleton page 1`] = `
"import { notFound } from "next/navigation";
import { asImageSrc } from "@prismicio/client";
import { SliceZone } from "@prismicio/react";

import { createClient } from "@/prismicio";
import { components } from "@/slices";
		
		export default async function Page() {
	const client = createClient();
	const page = await client.getSingle("homepage").catch(() => notFound());

	return <SliceZone slices={page.data.slices} components={components} />;
}

		export async function generateMetadata() {
	const client = createClient();
	const page = await client.getSingle("homepage").catch(() => notFound());

	return {
		title: page.data.meta_title,
		description: page.data.meta_description,
		openGraph: {
			images: [{ url: asImageSrc(page.data.meta_image) ?? "" }],
		},
	};
}"
`;

exports[`generatePageComponent > App Router > TypeScript > generates repeatable page 1`] = `
"import type { Metadata } from "next";
import { notFound } from "next/navigation";
		import { asImageSrc } from "@prismicio/client";
		import { SliceZone } from "@prismicio/react";

		import { createClient } from "@/prismicio";
		import { components } from "@/slices";
		
type Params = { uid: string };

		export default async function Page({ params }: { params: Promise<Params> }) {
	const { uid } = await params;
	const client = createClient();
	const page = await client
		.getByUID("blog_post", uid)
		.catch(() => notFound());

	return <SliceZone slices={page.data.slices} components={components} />;
}

		export async function generateMetadata({
			params,
		}:
{ params: Promise<Params> }): Promise<Metadata> {
			const { uid } = await params;
			const client = createClient();
			const page = await client
				.getByUID("blog_post", uid)
				.catch(() => notFound());

			return {
				title: page.data.meta_title,
				description: page.data.meta_description,
				openGraph: {
					images: [{ url: asImageSrc(page.data.meta_image) ?? "" }],
				},
			};
		}
		export async function generateStaticParams() {
	const client = createClient();
	const pages = await client.getAllByType("blog_post");

	return pages.map((page) => ({ uid: page.uid }));
}"
`;

exports[`generatePageComponent > App Router > TypeScript > generates singleton page 1`] = `
"import type { Metadata } from "next";
import { notFound } from "next/navigation";
		import { asImageSrc } from "@prismicio/client";
		import { SliceZone } from "@prismicio/react";

		import { createClient } from "@/prismicio";
		import { components } from "@/slices";
		
		export default async function Page() {
	const client = createClient();
	const page = await client.getSingle("homepage").catch(() => notFound());

	return <SliceZone slices={page.data.slices} components={components} />;
}

		export async function generateMetadata(): Promise<Metadata> {
	const client = createClient();
	const page = await client.getSingle("homepage").catch(() => notFound());

	return {
		title: page.data.meta_title,
		description: page.data.meta_description,
		openGraph: {
			images: [{ url: asImageSrc(page.data.meta_image) ?? "" }],
		},
	};
}"
`;

exports[`generatePageComponent > Pages Router > JavaScript > generates repeatable page 1`] = `
"import Head from "next/head";
import { isFilled, asLink, asImageSrc } from "@prismicio/client";
import { SliceZone } from "@prismicio/react";

import { components } from "@/slices";
import { createClient } from "@/prismicio";
		
		export default function Page({
	page,
}) {
	return (
		<>
			<Head>
				<title>{page.data.meta_title}</title>
				{isFilled.keyText(page.data.meta_description) ? (
					<meta name="description" content={page.data.meta_description} />
				) : null}
				{isFilled.image(page.data.meta_image) ? (
					<meta property="og:image" content={asImageSrc(page.data.meta_image) || ""} />
				) : null}
			</Head>
			<SliceZone slices={page.data.slices} components={components} />
		</>
	);
}

		export async function getStaticProps({
	params,
	previewData,
}) {
	const client = createClient({ previewData });
	const page = await client.getByUID("blog_post", params.uid);

	return { props: { page } };
}
		export async function getStaticPaths() {
	const client = createClient();
	const pages = await client.getAllByType("blog_post");

	return {
		paths: pages.map((page) => asLink(page)),
		fallback: false,
	};
}"
`;

exports[`generatePageComponent > Pages Router > JavaScript > generates singleton page 1`] = `
"import Head from "next/head";
import { isFilled, asImageSrc } from "@prismicio/client";
import { SliceZone } from "@prismicio/react";

import { components } from "@/slices";
import { createClient } from "@/prismicio";
		
		export default function Page({
	page,
}) {
	return (
		<>
			<Head>
				<title>{page.data.meta_title}</title>
				{isFilled.keyText(page.data.meta_description) ? (
					<meta name="description" content={page.data.meta_description} />
				) : null}
				{isFilled.image(page.data.meta_image) ? (
					<meta property="og:image" content={asImageSrc(page.data.meta_image) || ""} />
				) : null}
			</Head>
			<SliceZone slices={page.data.slices} components={components} />
		</>
	);
}

		export async function getStaticProps({ previewData }) {
	const client = createClient({ previewData });
	const page = await client.getSingle("homepage");

	return { props: { page } };
}"
`;

exports[`generatePageComponent > Pages Router > TypeScript > generates repeatable page 1`] = `
"import type { GetStaticPropsContext, InferGetStaticPropsType } from "next";
import Head from "next/head";
		import { isFilled, asLink, asImageSrc } from "@prismicio/client";
		import { SliceZone } from "@prismicio/react";

		import { components } from "@/slices";
		import { createClient } from "@/prismicio";
		
type Params = { uid: string };

		export default function Page({
		page,
	}:
InferGetStaticPropsType<typeof getStaticProps>) {
		return (
			<>
				<Head>
					<title>{page.data.meta_title}</title>
					{isFilled.keyText(page.data.meta_description) ? (
						<meta name="description" content={page.data.meta_description} />
					) : null}
					{isFilled.image(page.data.meta_image) ? (
						<meta property="og:image" content={asImageSrc(page.data.meta_image) || ""} />
					) : null}
				</Head>
				<SliceZone slices={page.data.slices} components={components} />
			</>
		);
	}

		export async function getStaticProps({
			params,
			previewData,
		}:
GetStaticPropsContext<Params>) {
			const client = createClient({ previewData });
			const page = await client.getByUID("blog_post", params!.uid);

			return { props: { page } };
		}
		export async function getStaticPaths() {
	const client = createClient();
	const pages = await client.getAllByType("blog_post");

	return {
		paths: pages.map((page) => asLink(page)),
		fallback: false,
	};
}"
`;

exports[`generatePageComponent > Pages Router > TypeScript > generates singleton page 1`] = `
"import type { GetStaticPropsContext, InferGetStaticPropsType } from "next";
import Head from "next/head";
		import { isFilled, asImageSrc } from "@prismicio/client";
		import { SliceZone } from "@prismicio/react";

		import { components } from "@/slices";
		import { createClient } from "@/prismicio";
		
		export default function Page({
		page,
	}:
InferGetStaticPropsType<typeof getStaticProps>) {
		return (
			<>
				<Head>
					<title>{page.data.meta_title}</title>
					{isFilled.keyText(page.data.meta_description) ? (
						<meta name="description" content={page.data.meta_description} />
					) : null}
					{isFilled.image(page.data.meta_image) ? (
						<meta property="og:image" content={asImageSrc(page.data.meta_image) || ""} />
					) : null}
				</Head>
				<SliceZone slices={page.data.slices} components={components} />
			</>
		);
	}

		export async function getStaticProps({ previewData }: GetStaticPropsContext) {
	const client = createClient({ previewData });
	const page = await client.getSingle("homepage");

	return { props: { page } };
}"
`;
